    * 0047 Add new collection of checks to monitor Fritz!Box devices...
    * 0027 esx_vsphere_sensors: it is now possible override the state of sensors
    * 0090 apc_ats_status: New Check for monitoring APC Automatic Transfer Switches
    * 0080 Added new checks for Brocade NetIron MLX switching / routing devices...
    * 0091 apc_ats_output: new check for output measurements on APC ATS devices
    * 0093 check_http: Default service description prefix can be avoided...
    * 0068 check_sql: support for mssql databases included
    * 0208 fileinfo.groups: Added minimum/maximum file size parameters...
    * 0024 FIX: cisco_wlc: removed configuration parameter ap_model
    * 0065 FIX: veeam_client: check behaviour improved when backup is in progress
    * 0066 FIX: veeam_jobs: check behaviour improved when backup is in progress
    * 0209 FIX: Cleaned up bad code in fileinfo.groups check

    Multisite:
    * 0001 New filters for selecting several host/service-groups at once...
    * 0050 New concept of favorite hosts and services plus matching filters and views...
    * 0211 GUI Notify: Added notify method "popup" to really create popup windows...
    * 0043 FIX: LDAP: Improved error reporting during synchronisation...
    * 0044 FIX: LDAP: Fixed error with empty groups during non nested group sync...
    * 0045 FIX: LDAP: Fixed error when synchronizing non nested groups to roles
    * 0046 FIX: Allowing "-" chars in var names again...
    * 0049 FIX: Fixed check-mk-automation call on each new created apache thread...
    * 0203 FIX: Changed sidebar reload interval to be more random...
    * 0204 FIX: Reduced I/O on logins with access time recording or failed login counts...
    * 0206 FIX: Fixed logwatch permission check when using liveproxy...
    * 0210 FIX: LDAP: Fixed problem syncing contactgroups of a user with umlauts in CN

    WATO:
    * 0053 New rule for configuring the display_name of a service...