@@ -45,17 +45,18 @@ def get_input(valuespec, varprefix):
 # current transaction. This is for preview mode
 def edit_dictionary(entries, value, focus=None, hover_help=True,
                     validate=None, buttontext=None, title=None,
-                    buttons = None, method="GET", preview=False):
+                    buttons = None, method="GET", preview=False,
+                    varprefix="", formname="form"):
     new_value = value.copy()
-    if html.var("filled_in") == "form" and html.transaction_valid():
+    if html.var("filled_in") == formname and html.transaction_valid():
         if not preview:
             html.check_transaction()
 
         messages = []
         for name, vs in entries:
             try:
-                v = vs.from_html_vars(name)
-                vs.validate_value(v, name)
+                v = vs.from_html_vars(varprefix + name)
+                vs.validate_value(v, varprefix + name)
                 new_value[name] = v
             except MKUserError, e:
                 messages.append(u"%s: %s" % (vs.title(), e.message))
@@ -77,7 +78,7 @@ def edit_dictionary(entries, value, focus=None, hover_help=True,
             return new_value
 
 
-    html.begin_form("form", method=method)
+    html.begin_form(formname, method=method)
     header(title and title or _("Properties"))
     first = True
     for name, vs in entries:
@@ -87,9 +88,9 @@ def edit_dictionary(entries, value, focus=None, hover_help=True,
             v = value[name]
         else:
             v = vs.default_value()
-        vs.render_input(name, v)
+        vs.render_input(varprefix + name, v)
         if (not focus and first) or (name == focus):
-            vs.set_focus(name)
+            vs.set_focus(varprefix + name)
             first = False
 
     end()
@@ -100,6 +101,7 @@ def edit_dictionary(entries, value, focus=None, hover_help=True,
         if buttontext == None:
             buttontext = _("Save")
         html.button("save", buttontext)
+    html.del_var("filled_in") # Should be ignored be hidden_fields, but I do not dare to change it there
     html.hidden_fields()
     html.end_form()
 
