@@ -9,9 +9,9 @@
     * 0090 apc_ats_status: New Check for monitoring APC Automatic Transfer Switches
     * 0080 Added new checks for Brocade NetIron MLX switching / routing devices...
     * 0091 apc_ats_output: new check for output measurements on APC ATS devices
-    * 0093 check_http: Default service description prefix can be avoided...
     * 0068 check_sql: support for mssql databases included
     * 0208 fileinfo.groups: Added minimum/maximum file size parameters...
+    * 0093 check_http: Default service description prefix can be avoided...
     * 0024 FIX: cisco_wlc: removed configuration parameter ap_model
     * 0065 FIX: veeam_client: check behaviour improved when backup is in progress
     * 0066 FIX: veeam_jobs: check behaviour improved when backup is in progress
@@ -47,6 +47,7 @@
     * 0054 New labelling options for availability table...
     * 0055 Allow grouping by host, host group or service group...
     * 0056 New concept of service periods in availability reporting...
+    * 0002 You can now annotate events in the availability reporting...
 
     Event Console:
     * 0026 FIX: snmpd_mkevent.py: fixed crash on startup
